--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS - My Site</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico?v=2">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,17 +13,17 @@
 </head>
 <body>
     <div class="start">
-        <img src="images/cloud.png" class="top-cloud" alt="cloud-img">
-        <img src="images/cloud.png" class="bottom-cloud" alt="cloud-img">
+        <img src="cloud.png" class="top-cloud" alt="cloud-img">
+        <img src="cloud.png" class="bottom-cloud" alt="cloud-img">
         <h1>I'm Maciej.</h1>
         <h2 style="margin-top: 10px;">a programmer.</h2>
-        <img src="images/mountain.png" class="mountain" alt="cloud-img">
+        <img src="mountain.png" class="mountain" alt="cloud-img">
     </div>
 
 
     <div class="middle-container">
         <div class="profile">
-          <img src="images/pfp.png" alt="profile picture" style="width: 200px;height:200px;">
+          <img src="pfp.png" alt="profile picture" style="width: 200px;height:200px;">
           <h2>Hello.</h2>
           <p>I'm a student who's trying to become python and web developer. I love eating and learning new skills 🐱‍🏍</p>
         </div>
