--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="brain-img" src="https://cdn-icons.flaticon.com/png/512/4486/premium/4486571.png?token=exp=1649509955~hmac=bce1ddc984800f72f55dc58ced1ded4c" alt="brain-img">
+            <img class="brain-img" src="brain-time.png" alt="brain-img">
             <h3>Fast Learning</h3>
             <p>Since my childhood I was always interested in many things. This curiosity I had made me hungry for learning new skills. 
               So in order to learn skills that I wanted and also have fun, I developed an ability to learn fast 🐱‍👓. </p>
